// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-dock should render with custom props 1`] = `
<modus-wc-dock custom-class="test-class" position="left" show-labels="false" size="lg">
  <nav aria-label="Dock navigation" class="modus-wc-dock modus-wc-dock-icons-only modus-wc-dock-left modus-wc-dock-lg test-class">
    <div class="modus-wc-dock-item">
      <modus-wc-button>
        <!---->
        <button aria-label="Home" class="modus-wc-btn modus-wc-btn-base-inverted modus-wc-btn-block modus-wc-btn-borderless modus-wc-btn-md modus-wc-dock-item-button" tabindex="0" type="button">
          <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
            <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
              home
            </i>
          </modus-wc-icon>
        </button>
      </modus-wc-button>
    </div>
    <div class="modus-wc-dock-item modus-wc-dock-item-active">
      <modus-wc-button>
        <!---->
        <button aria-current="page" aria-label="Inbox" class="modus-wc-btn modus-wc-btn-base-inverted modus-wc-btn-block modus-wc-btn-borderless modus-wc-btn-md modus-wc-dock-item-button" tabindex="0" type="button">
          <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
            <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
              email
            </i>
          </modus-wc-icon>
        </button>
      </modus-wc-button>
    </div>
    <div class="modus-wc-dock-item">
      <modus-wc-button>
        <!---->
        <button aria-label="Settings" class="modus-wc-btn modus-wc-btn-base-inverted modus-wc-btn-block modus-wc-btn-borderless modus-wc-btn-md modus-wc-dock-item-button" tabindex="0" type="button">
          <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
            <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
              settings
            </i>
          </modus-wc-icon>
        </button>
      </modus-wc-button>
    </div>
  </nav>
</modus-wc-dock>
`;

exports[`modus-wc-dock should render with default props 1`] = `
<modus-wc-dock>
  <nav aria-label="Dock navigation" class="modus-wc-dock modus-wc-dock-bottom modus-wc-dock-md">
    <div class="modus-wc-dock-item modus-wc-dock-item-active">
      <modus-wc-button>
        <!---->
        <button aria-current="page" class="modus-wc-btn modus-wc-btn-base-inverted modus-wc-btn-block modus-wc-btn-borderless modus-wc-btn-sm modus-wc-dock-item-button" tabindex="0" type="button">
          <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
            <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
              home
            </i>
          </modus-wc-icon>
          <span class="modus-wc-dock-item-label">
            Home
          </span>
        </button>
      </modus-wc-button>
    </div>
    <div class="modus-wc-dock-item">
      <modus-wc-button>
        <!---->
        <button class="modus-wc-btn modus-wc-btn-base-inverted modus-wc-btn-block modus-wc-btn-borderless modus-wc-btn-sm modus-wc-dock-item-button" tabindex="0" type="button">
          <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
            <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
              email
            </i>
          </modus-wc-icon>
          <span class="modus-wc-dock-item-label">
            Inbox
          </span>
        </button>
      </modus-wc-button>
    </div>
    <div class="modus-wc-dock-item">
      <modus-wc-button>
        <!---->
        <button class="modus-wc-btn modus-wc-btn-base-inverted modus-wc-btn-block modus-wc-btn-borderless modus-wc-btn-sm modus-wc-dock-item-button" tabindex="0" type="button">
          <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
            <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
              settings
            </i>
          </modus-wc-icon>
          <span class="modus-wc-dock-item-label">
            Settings
          </span>
        </button>
      </modus-wc-button>
    </div>
  </nav>
</modus-wc-dock>
`;
